--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,9 @@
     <string name="menu_profile">Профил</string>
     <string name="menu_news">Новини</string>
     <string name="title_activity_main4">Main4Activity</string>
+    <string name="menu_tips">Съвети</string>
+    <string name="menu_bonus">Бонус</string>
+    <string name="menu_shop">Партньори</string>
 
 
 </resources>
