--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="menu_news">Новини</string>
     <string name="title_activity_main4">Main4Activity</string>
     <string name="menu_tips">Съвети</string>
-    <string name="menu_bonus">Бонус</string>
+    <string name="menu_bonus">Бонуси</string>
     <string name="menu_shop">Партньори</string>
 
 
