--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="menu_tips">Съвети</string>
     <string name="menu_bonus">Бонуси</string>
     <string name="menu_shop">Партньори</string>
-
+    <string name="menu_info">Информация</string>
 
 
 </resources>
